force-app/main/default/objects/Order/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Indicates if this is a new membership or a renewal</description>
    <inlineHelpText>Indicates if this is a new membership or a renewal</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Action</valueSetName>
    </valueSet>
</CustomField>