force-app/main/default/objects/Order/fields/Activation_Error__c.field-meta.xml
<CustomField>
    <fullName>Activation_Error__c</fullName>
    <label>Activation Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>