force-app/main/default/objects/Order/fields/Approved_Denied_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Denied_Date__c</fullName>
    <description>Date the membership was approved by partner admin</description>
    <inlineHelpText>Date the membership was approved by partner admin</inlineHelpText>
    <label>Approved/Denied Date</label>
    <type>Date</type>
</CustomField>