force-app/main/default/objects/Order/fields/Chargent_Order__c.field-meta.xml
<CustomField>
    <fullName>Chargent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargent Order</label>
    <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
    <relationshipLabel>Orders (Chargent Order)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>