force-app/main/default/objects/Order/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <description
  >Identifies which transactional flow this Order represents (Join = new membership, Renew = membership renewal). Set by the originating LWC at cart create. Read by PromoCodeApplyService to validate Promo_Code__c.Applicable_To__c. Null is treated as Join for backwards compatibility.</description>
    <inlineHelpText
  >Set by the originating checkout flow. Null is treated as Join.</inlineHelpText>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>