force-app/main/default/objects/Order/fields/Global_Partner_Admin__c.field-meta.xml
<CustomField>
    <fullName>Global_Partner_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Partner Admin</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Global Admin Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>