force-app/main/default/objects/Order/fields/Member_s_Company__c.field-meta.xml
<CustomField>
    <fullName>Member_s_Company__c</fullName>
    <formula>Quote.Member_s_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member&apos;s Company</label>
    <type>Text</type>
</CustomField>