force-app/main/default/objects/Order/fields/Partner_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Membership_Status__c</fullName>
    <label>Partner Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>