force-app/main/default/objects/Order/fields/Person_Account_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Display_Name__c</fullName>
    <formula>Account.FirstName + &quot; &quot; +  Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Display Name</label>
    <type>Text</type>
</CustomField>