force-app/main/default/objects/Order/fields/Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Date__c</fullName>
    <label>Pricing Date</label>
    <type>DateTime</type>
</CustomField>