force-app/main/default/objects/Order/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary Pricing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Pricing_Source</valueSetName>
    </valueSet>
</CustomField>