force-app/main/default/objects/Order/fields/Primary_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Type__c</fullName>
    <label>Primary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Membership_Type</valueSetName>
    </valueSet>
</CustomField>