force-app/main/default/objects/Order/fields/Promo_Codes_Entered__c.field-meta.xml
<CustomField>
    <fullName>Promo_Codes_Entered__c</fullName>
    <description>Comma-separated list of promo codes the member has entered against this cart. Persists across navigate-away so the applied code list survives a refresh. Written by the apply-flow LWC; cleared on Order Activation. See docs/promo-code/checkout-apply-flow.md §4.1.</description>
    <label>Promo Codes Entered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>