force-app/main/default/objects/Order/fields/Promo_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount_Total__c</fullName>
    <description>Total promo code discount applied to this Order, aggregated from all applied Promo Code Items. Used by the pricing procedure to surface the order-level promo discount via the Sales Transaction context.</description>
    <inlineHelpText>Total promo code discount applied to this Order.</inlineHelpText>
    <label>Promo Discount Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>