force-app/main/default/objects/Order/fields/RCA_Pricing_Debug__c.field-meta.xml
<CustomField>
    <fullName>RCA_Pricing_Debug__c</fullName>
    <label>RCA Pricing Debug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>