force-app/main/default/objects/Order/fields/Recurring_Payment_Order__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Payment Order</label>
    <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>