force-app/main/default/objects/Order/fields/Response_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Days__c</fullName>
    <description>Number of days between order creation and approval/denial</description>
    <formula>IF(
  NOT(ISBLANK(Global_Partner__c)),
  IF(
    ISBLANK(Approved_Denied_Date__c),
    TODAY() - DATEVALUE(CreatedDate),
    Approved_Denied_Date__c - DATEVALUE(CreatedDate)
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between order creation and approval/denial</inlineHelpText>
    <label>Response Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>