force-app/main/default/objects/Order/fields/Total_Approved_Payment_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Payment_Transactions__c</fullName>
    <label>Total Approved Payment Transactions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>