force-app/main/default/objects/Order/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <inlineHelpText>Enter the VAT Number for Europe Entities for Invoicing</inlineHelpText>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>