force-app/main/default/objects/Order/listViews/Orders_Pending_Partner_Admin_Approval.listView-meta.xml
<ListView>
    <fullName>Orders_Pending_Partner_Admin_Approval</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Action__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Global_Partner_Admin__c</columns>
    <columns>Global_Partner__c</columns>
    <columns>Response_Time_Days__c</columns>
    <columns>Partner_Membership_Status__c</columns>
    <columns>ORDER.BILL_TO_CONTACT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <filters>
        <field>Global_Partner__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Global_Partner_Admin__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Partner_Membership_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Denied</value>
    </filters>
    <label>Orders Pending Partner Admin Approval</label>
</ListView>